# skills

./: .gitignore  README.md  skills-lock.json
evals/code-like-michael/: README.md
evals/code-like-michael/challenges/maintain-styled-codebase/fixture/: example.config.json  pyproject.toml
evals/code-like-michael/challenges/maintain-styled-codebase/fixture/filter_plugins/: block_sponsored.py
evals/code-like-michael/challenges/maintain-styled-codebase/fixture/newsletter/: __init__.py  cli.py  config.py  mail.py  plugins.py  rss.py  store.py  types.py
evals/code-like-michael/challenges/maintain-styled-codebase/fixture/tests/: test_newsletter.py
evals/html-rich-communication/: evals.json
rules/: working-docs.mdc
skills/adaptive-decision-interviews/: SKILL.md
skills/clockify-api/: SKILL.md
skills/code-like-michael/: SKILL.md
skills/coding-fingerprint-wizard/: SKILL.md
skills/doc-coauthoring/: SKILL.md
skills/dumc-email-to-obsidian-notes/: SKILL.md
skills/handoff-iteration-loop/: SKILL.md  coordinator.md  discovery.md  harness-principles.md  implementor.md  planner.md  reviewer.md  workflow.md
skills/html-artifact-publishing/: SKILL.md
skills/html-rich-communication/: SKILL.md
skills/internal-tooling/: SKILL.md  checklist.md  workflow.md
skills/jake-tools/: SKILL.md
skills/knowledge-base-navigator/: SKILL.md
skills/long-running-agent-harness/: SKILL.md
skills/michael-brand-pack/: README.md  SKILL.md  index.html
skills/obsidian-cli/: SKILL.md
skills/obsidian-recording-to-meeting-minutes/: SKILL.md
skills/para-custodian/: SKILL.md
(+204 files in other folders)
